# MarkerVR

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
markerCreator/: CMakeLists.txt
markerDetector/: CMakeLists.txt
marker_detector/: main.cpp
src/MarkerCreator/: main.cpp
src/MarkerDetector/: main.cpp
src/MarkerVR/: CMakeLists.txt  DebugWindow.cpp  DebugWindow.h  MarkerManager.cpp  MarkerTacker.cpp  RotationUtil.cpp  RotationUtil.h  SocketPoseClient.cpp  SocketPoseClient.h
src/MarkersObjectPoseEstimation/: CMakeLists.txt  MarkerManager.cpp  MarkerManager.h  MarkerTacker.cpp  MarkerTacker.h  Quaternion.cpp  Quaternion.h  RotationUtil.cpp  RotationUtil.h  SocketPoseClient.cpp  SocketPoseClient.h  main.cpp
